[gd_scene load_steps=4 format=3 uid="uid://cqw6heomkb6q0"]

[ext_resource type="Script" path="res://Scenes/JeremyScenes/Attacks/Skewer/skewer.gd" id="1_g8jj3"]
[ext_resource type="Texture2D" uid="uid://dopmgcvn3mjo8" path="res://Assets/JeremyAssets/skewer_normal.png" id="1_nfv5m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryh2v"]
size = Vector2(33.234, 4.24264)

[node name="Skewer" type="Area2D" groups=["Attack"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_g8jj3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nfv5m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.49012e-08, -1.49012e-08)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ryh2v")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
